# PIBIC-predicao-fenotipica

./: README.md  pyproject.toml
data/raw/: genotypes_juliana.csv  genotypes_williams.csv  main.csv
data/transformed/: transformed_data.csv
notebooks/: original_eda.ipynb  validating_models.ipynb
src/: extract.py  load.py  main.py  transform.py
