[project]
name = "predicao-fenotipica"
version = "0.1.0"
description = "Repositório com códigos referentes à pesquisa de PIBIC do aluno Juan Oliveira da UNICAP. Tema: Predição Fenotípica à partir de marcadores genéticos"
authors = [
    {name = "Juan Oliveira",email = "ruantos@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "supabase (>=2.28.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
